--- a/app/src/main/res/layout/get_driver_fragment.xml
+++ b/app/src/main/res/layout/get_driver_fragment.xml
@@ -9,7 +9,8 @@
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clickable="false" />
+        android:clickable="false"
+        android:background="@android:color/white"/>
 
 
     <TextView
