--- a/app/src/main/res/layout/create_ride_layout.xml
+++ b/app/src/main/res/layout/create_ride_layout.xml
@@ -103,18 +103,16 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <LinearLayout
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
-                    android:orientation="horizontal"
-                    android:weightSum="1">
+                    android:orientation="horizontal">
 
 
                     <EditText
                         android:id="@+id/from_adr"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
                         android:background="@null"
                         android:fontFamily="@font/roboto"
                         android:hint="@string/from"
@@ -125,7 +123,9 @@
                         android:textColor="@android:color/black"
                         android:textColorHint="#70000000"
                         android:textCursorDrawable="@drawable/bg_color_cursor"
-                        android:textSize="16sp" />
+                        android:textSize="16sp"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toLeftOf="@+id/from_cross" />
 
 
                     <ImageView
@@ -139,7 +139,10 @@
                         android:paddingEnd="12dp"
                         android:paddingBottom="12dp"
                         android:src="@drawable/ic_cross"
-                        android:visibility="gone" />
+                        android:visibility="gone"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintRight_toLeftOf="@+id/btn_map_from"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
                         android:id="@+id/btn_map_from"
@@ -151,9 +154,15 @@
                         android:text="@string/map"
                         android:textColor="@android:color/black"
                         android:textSize="14sp"
-                        android:visibility="gone" />
+                        android:visibility="gone"
+                        app:layout_constraintRight_toRightOf="parent" />
 
-                </LinearLayout>
+                    <View
+                        android:id="@+id/from_adr_box"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <View
                     android:layout_width="match_parent"
@@ -162,17 +171,15 @@
                     android:layout_marginBottom="5dp"
                     android:background="#30000000" />
 
-                <LinearLayout
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
-                    android:orientation="horizontal"
-                    android:weightSum="1">
+                    android:orientation="horizontal">
 
                     <EditText
                         android:id="@+id/to_adr"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
                         android:background="@null"
                         android:fontFamily="@font/roboto"
                         android:hint="@string/to"
@@ -184,7 +191,9 @@
                         android:textColor="@android:color/black"
                         android:textColorHint="#70000000"
                         android:textCursorDrawable="@drawable/bg_color_cursor"
-                        android:textSize="16sp" />
+                        android:textSize="16sp"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toLeftOf="@+id/to_cross" />
 
 
                     <ImageView
@@ -198,7 +207,10 @@
                         android:paddingEnd="12dp"
                         android:paddingBottom="12dp"
                         android:src="@drawable/ic_cross"
-                        android:visibility="gone" />
+                        android:visibility="gone"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintRight_toLeftOf="@+id/btn_map_to"
+                        app:layout_constraintTop_toTopOf="parent" />
 
 
                     <TextView
@@ -211,9 +223,15 @@
                         android:text="@string/map"
                         android:textColor="@android:color/black"
                         android:textSize="14sp"
-                        android:visibility="gone" />
+                        android:visibility="gone"
+                        app:layout_constraintRight_toRightOf="parent" />
 
-                </LinearLayout>
+                    <View
+                        android:id="@+id/to_adr_box"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
             </LinearLayout>
 
@@ -303,3 +321,4 @@
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
